Bar charts resize to make sure they never break into multiple lines.

--- a/assets/css/_code.scss
+++ b/assets/css/_code.scss
@@ -6,6 +6,10 @@ code{
 	padding:3px 4px;	
 }
 
+code{
+	white-space:nowrap;
+}
+
 pre{
 	display:block;
 
