--- a/assets/css/_graphs.scss
+++ b/assets/css/_graphs.scss
@@ -25,7 +25,9 @@
 }
 
 .bar{
-	
+	position:relative;
+	//overflow-y:hidden;
+
 	.barColumn{
 		height:$size-7;
 		margin-bottom:$size-2;
@@ -34,6 +36,19 @@
 			height:100%;
 			width:.75px;
 			display:inline-block;
+			z-index:10;
+			position:static;
+
+			&:nth-of-type(100n):before{
+				content:'';
+				width:1px;
+				position:absolute;
+				background:$grey;
+				height:300px;
+				top:0;
+				bottom:0;
+				z-index:-5;
+			}
 
 			span{
 				top:$size-7;
