--- a/assets/css/_responsive.scss
+++ b/assets/css/_responsive.scss
@@ -13,7 +13,7 @@
 	}
 
 	#title{
-		max-width:90%;
+		max-width:89%;
 	}
 
 	h2{
