--- a/assets/css/_typography.scss
+++ b/assets/css/_typography.scss
@@ -24,7 +24,7 @@ h3{
     margin-bottom:$size-5;
 }
 
-h4, p, small, figure, figcaption, code, label, li{
+h4, p, small, figure, figcaption, code, label, li, aside{
     font-size:$size-5;
     padding-bottom:$size-3;
 }
